--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -349,8 +349,8 @@
             </table>
 
             <!-- Altre Card dell'artista -->
-            <h4 class="mt-5">Altro di</h4>
-            <div class="row my-5" id="altriAlbums">
+            <h4 class="mt-5 ms-2" id="titleAlbumBottom"></h4>
+            <div class="row mb-5" id="altriAlbums">
               <!-- <div class="col-3">
                 
                   <div class="btn btn-secondary card mb-4 border border-0 bg-darkness">
