aggiunto pointer su Home e Search

--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
         <header class="col-2 rounded p-0">
           <div class="rounded bg-darkness p-4 mb-2">
             <ul class="list-unstyled d-flex flex-column gap-3 m-0">
-              <li class="align-middle">
+              <li class="align-middle pointer" id="homeBtn">
                 <svg
                   data-encore-id="icon"
                   role="img"
@@ -30,7 +30,7 @@
                 </svg>
                 <span>Home</span>
               </li>
-              <li class="align-middle">
+              <li class="align-middle pointer" id="searchBtn">
                 <svg
                   id="search"
                   data-encore-id="icon"
