--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -246,7 +246,7 @@
             </div>
           </div>
         </div>
-        <div class="container">
+        <div class="container border-bottom border-light-subtle mb-5">
           <div class="row mt-2" id="tabella">
             <div class="col d-flex mt-4 ms-3">
               <button class="rounded-circle border border-dark me-3 p-2" id="playBtn">
@@ -476,6 +476,15 @@
                     d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"
                   /></svg
               ></a>
+            </div>
+            <div class="container d-flex flex-wrap border-top border-light my-5 w-75">
+              <div class="info mx-3 pt-5 text-body-secondary"><p>Informazioni legali</p></div>
+              <div class="info ms-3 pt-5 text-body-secondary"><p>Sicurezza e Centro sulla privacy</p></div>
+              <div class="info ms-3 pt-5 text-body-secondary"><p>informativa sulla privacy</p></div>
+              <div class="info ms-3 pt-5 text-body-secondary"><p></p></div>
+              <div class="info ms-3 pt-5 text-body-secondary"><p>Impostazione cookie</p></div>
+              <div class="info ms-3 pt-5 text-body-secondary"><p>Info annunci</p></div>
+              <div class="info ms-3 pt-5 text-body-secondary"><p>&copy; Spotify AB</p></div>
             </div>
           </div>
         </div>
