cambiato grandezza in vh contenitori e scrollbar

--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
     <div class="">
       <div class="row justify-content-center p-2">
         <header class="col-2 rounded p-0">
-          <div class="rounded bg-darkness p-4 mb-2" style="height: 20vh">
+          <div class="rounded bg-darkness p-4 mb-2" style="height: 15vh">
             <ul class="list-unstyled d-flex flex-column gap-3 m-0">
               <li class="align-middle pointer" id="homeBtn">
                 <svg data-encore-id="icon" role="img" aria-hidden="true" class="Svg-sc-ytk21e-0 bneLcE home-icon QbaKKdcHNA2x3_YJvpYu" viewBox="0 0 24 24" style="width: 30">
@@ -41,8 +41,8 @@
               </li>
             </ul>
           </div>
-          <div class="bg-darkness rounded p-4" style="height: 70vh">
-            <div class="bg-darkness">
+          <div class="bg-darkness rounded p-4">
+            <div class="bg-darkness" style="height: 10vh">
               <div class="d-flex">
                 <button class="btn text-white me-auto bg-darkness mb-2 p-1" style="width: 150px">
                   <span
@@ -90,7 +90,7 @@
                 </div>
               </div>
             </div>
-            <div class="scrollbar text-truncate" style="height: 48vh">
+            <div class="scrollbar text-truncate" style="height: 60vh">
               <div class="d-flex justify-content-between">
                 <button class="btn">
                   <svg data-encore-id="icon" role="img" aria-hidden="true" style="width: 15px" viewBox="0 0 16 16">
