--- a/home.html
+++ b/home.html
@@ -70,14 +70,14 @@
             <div class="bg-darkness">
               <div class="d-flex">
                 <button class="btn text-white me-auto bg-darkness mb-2 p-1" style="width: 150px">
-                  <span
-                    ><svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 24 24" style="width: 30px">
+                  <span>
+                    <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 24 24" style="width: 30px">
                       <path
                         fill="#B3B3B3"
                         d="M3 22a1 1 0 0 1-1-1V3a1 1 0 0 1 2 0v18a1 1 0 0 1-1 1zM15.5 2.134A1 1 0 0 0 14 3v18a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V6.464a1 1 0 0 0-.5-.866l-6-3.464zM9 2a1 1 0 0 0-1 1v18a1 1 0 1 0 2 0V3a1 1 0 0 0-1-1z"
                       ></path>
                     </svg> </span
-                  >La tua Libreria
+                  ><b class="d-none d-lg-block">La tua Libreria</b>
                 </button>
                 <button class="btn text-white mx-2 bg-darkness" style="width: 40px; height: 40px">
                   <span style="display: block"
@@ -109,7 +109,7 @@
               <div>
                 <div>
                   <div>
-                    <div class="mb-2">
+                    <div class="mb-2 d-none d-lg-block">
                       <button class="rounded-pill border-0 bg-black text-white px-2">
                         <span>Playlist</span>
                       </button>
@@ -125,7 +125,7 @@
               </div>
             </div>
             <div class="scrollbar text-truncate" style="height: 48vh">
-              <div class="d-flex justify-content-between">
+              <div class="d-flex justify-content-between d-none d-lg-block">
                 <button class="btn">
                   <svg data-encore-id="icon" role="img" aria-hidden="true" style="width: 15px" viewBox="0 0 16 16">
                     <path
