responsive home (WIP)

--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
       <div class="row justify-content-center p-2">
         <header class="col-2 rounded p-0">
           <div class="rounded bg-darkness p-4 mb-2" style="height: 20vh">
-            <ul class="list-unstyled d-flex flex-column gap-3 m-0">
+            <ul class="list-unstyled d-flex flex-column gap-3 m-0 justify-content-center">
               <li class="align-middle pointer" id="homeBtn">
                 <svg
                   data-encore-id="icon"
@@ -28,7 +28,7 @@
                     d="M12.5 3.247a1 1 0 0 0-1 0L4 7.577V20h4.5v-6a1 1 0 0 1 1-1h5a1 1 0 0 1 1 1v6H20V7.577l-7.5-4.33zm-2-1.732a3 3 0 0 1 3 0l7.5 4.33a2 2 0 0 1 1 1.732V21a1 1 0 0 1-1 1h-6.5a1 1 0 0 1-1-1v-6h-3v6a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V7.577a2 2 0 0 1 1-1.732l7.5-4.33z"
                   ></path>
                 </svg>
-                <span>Home</span>
+                <span class="d-none d-lg-inline">Home</span>
               </li>
               <li class="align-middle pointer" id="searchBtn">
                 <svg
@@ -62,7 +62,7 @@
                     d="M1.126 10.558c0-5.14 4.226-9.28 9.407-9.28 5.18 0 9.407 4.14 9.407 9.28a9.157 9.157 0 0 1-2.077 5.816l4.344 4.344a1 1 0 0 1-1.414 1.414l-4.353-4.353a9.454 9.454 0 0 1-5.907 2.058c-5.18 0-9.407-4.14-9.407-9.28zm9.407-7.28c-4.105 0-7.407 3.274-7.407 7.28s3.302 7.279 7.407 7.279 7.407-3.273 7.407-7.28c0-4.005-3.302-7.278-7.407-7.278z"
                   ></path>
                 </svg>
-                <span>Cerca</span>
+                <span class="d-none d-lg-inline">Cerca</span>
               </li>
             </ul>
           </div>
@@ -76,8 +76,9 @@
                         fill="#B3B3B3"
                         d="M3 22a1 1 0 0 1-1-1V3a1 1 0 0 1 2 0v18a1 1 0 0 1-1 1zM15.5 2.134A1 1 0 0 0 14 3v18a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V6.464a1 1 0 0 0-.5-.866l-6-3.464zM9 2a1 1 0 0 0-1 1v18a1 1 0 1 0 2 0V3a1 1 0 0 0-1-1z"
                       ></path>
-                    </svg> </span
-                  ><b class="d-none d-lg-block">La tua Libreria</b>
+                    </svg>
+                    <span class="d-none d-xl-inline">La tua Libreria</span></span
+                  >
                 </button>
                 <button class="btn text-white mx-2 bg-darkness" style="width: 40px; height: 40px">
                   <span style="display: block"
