--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -490,6 +490,7 @@
             </div>
           </div>
         </main>
+        <aside class="col-2 rounded bg-darkness scrollbar" style="height: 90vh"></aside>
 
         <footer class="fixed-bottom bg-black p-0 m-0 container-fluid" style="height: 90px; width: 100wh">
           <div class="row p-2">
