cambiato titolo su head e aggiunto padding a titolo tabella

--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title>Spotify- AlbumPage</title>
     <link rel="stylesheet" href="./assets/dist/css/style.min.css" />
     <link rel="stylesheet" href="assets/css/circular-font.css" />
   </head>
@@ -338,7 +338,7 @@
                       <thead class="border-bottom border-light-subtle">
                         <tr>
                           <th scope="col">#</th>
-                          <th scope="col">Titolo</th>
+                          <th scope="col d-inline-block pb-5">Titolo</th>
                           <th scope="col">Riproduzioni</th>
                           <th scope="col">
                             <svg
